# la-communaute

./: .gitignore  CHANGELOG.md  Makefile  README.md  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  review-app-creation.yml  review-app-removal.yml
clevercloud/: cron.json  rebuild_index.sh  review_app_after_succes.sh  run_management_command.sh
config/: urls.py  wsgi.py
config/settings/: base.py  dev.py  test.py
lacommunaute/: conftest.py
lacommunaute/documentation/: helpers.py  urls.py  views.py
lacommunaute/event/: views.py
lacommunaute/forum/: models.py  views.py
lacommunaute/forum_conversation/: admin.py  views.py  views_htmx.py
lacommunaute/forum_file/: admin.py
lacommunaute/forum_member/: models.py
lacommunaute/nexus/: middleware.py  sync.py  urls.py  views.py
lacommunaute/openid_connect/: middleware.py  models.py  views.py
lacommunaute/pages/: sitemaps.py  urls.py  views.py
lacommunaute/partner/: helpers.py  models.py  urls.py  views.py
lacommunaute/search/: forms.py  models.py  tests.py  views.py
lacommunaute/surveys/: forms.py
lacommunaute/templates/: 404.html  end_alert.html  robots.txt
lacommunaute/users/: apps.py  factories.py  forms.py  models.py  utils.py  views.py
lacommunaute/utils/: context_processors.py  enums.py  matomo.py  urls.py
scripts/: populate.py
tests/: conftest.py  testing.py
tests/__snapshots__/: test_documentation.ambr
tests/documentation/: tests.py
tests/event/: factories.py  test_model.py  test_views.py
tests/forum/: test_categoryforum_createview.py  test_categoryforum_listview.py  test_forms.py  (+6 more)
(+301 files in other folders)
