[project]
name = "lacommunaute"
version = "2.25.0"
description = "La communauté de l'inclusion"
authors = []
license = {text = "ETALAB 2.0"}
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "Django<6.1",
    "python-dotenv>=1.0",
    "psycopg>=3.2",
    "django-compressor>=4.5",
    "django-libsass>=0.9",
    "sentry-sdk>=2.20",
    "django-social-share>=2.3.0",
    "django-htmx>=1.21",
    "django-permissions-policy>=4.24",
    "itoutils[django]>=25.12.22.0",
    "python-frontmatter>=1.3.0",
    "markdown>=3.10.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest-django>=4.9",
    "itoutils[django-testing]>=25.12.22.0",
    "pytest-xdist>=3.6",
    "ruff>=0.9",
    "djlint>=1.36",
    "syrupy>=4.8",
    "beautifulsoup4>=4.12",
    "html5lib~=1.1",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
ignore = []
# see prefixes in https://beta.ruff.rs/docs/rules/
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["lacommunaute"]
lines-after-imports = 2

[tool.djlint]
profile="django"
ignore="T002,T003,T027,H006,H023,D018"
max_attribute_length=200
format_css = true
format_js = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests*.py", "test_*.py"]
addopts = [
    "--reuse-db",
    "--strict-markers",
]

[tool.pytest.ini_options.markers]
no_django_db = "mark tests that should not be marked with django_db."
